Fixed an alignment bug.

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -89,4 +89,7 @@ body {
     background-attachment: fixed;
 }
 
-.middle {vertical-align: middle;}
+#middle {
+	vertical-align: middle;
+}
+
